--- a/src/App.css
+++ b/src/App.css
@@ -6,14 +6,15 @@
 
 body, html {
   width: 100%;
+  height: 100%;
   overflow-x: hidden;
 }
 
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .logo {
